# time

./: .gitignore  .x-update-copyright  AUTHORS  ChangeLog-2015  Makefile.am  NEWS  README  README.md  bootstrap.conf  cfg.mk  configure.ac
doc/: .gitignore  local.mk  time.texi
src/: local.mk  resuse.c  resuse.h  rusage-kb.c  rusage-kb.h  system.h  time.c
tests/: help-version.sh  local.mk  time-append.sh  time-aux.c  time-child-stderr.sh  time-exit-codes.sh  time-format-T.sh  time-max-rss.sh  time-posix-quiet.sh
